// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user can select multiple occurrences and enrol to them with enrolment form 4`] = `
{
  "dirty": true,
  "errors": {},
  "initialErrors": {},
  "initialTouched": {},
  "initialValues": {
    "hasEmailNotification": true,
    "hasSmsNotification": false,
    "isMandatoryAdditionalInformationRequired": false,
    "isSameResponsiblePerson": true,
    "isSharingDataAccepted": false,
    "language": "FI",
    "person": {
      "emailAddress": "",
      "name": "",
      "phoneNumber": "",
    },
    "studyGroup": {
      "amountOfAdult": "",
      "extraNeeds": "",
      "groupName": "",
      "groupSize": "",
      "person": {
        "emailAddress": "",
        "name": "",
        "phoneNumber": "",
      },
      "studyLevels": [],
      "unitId": "",
      "unitName": "",
    },
  },
  "isSubmitting": false,
  "isValid": true,
  "isValidating": false,
  "submitCount": 1,
  "touched": {
    "hasEmailNotification": true,
    "hasSmsNotification": true,
    "isMandatoryAdditionalInformationRequired": true,
    "isSameResponsiblePerson": true,
    "isSharingDataAccepted": true,
    "language": true,
    "person": {
      "emailAddress": true,
      "name": true,
      "phoneNumber": true,
    },
    "studyGroup": {
      "amountOfAdult": true,
      "extraNeeds": true,
      "groupName": true,
      "groupSize": true,
      "person": {
        "emailAddress": true,
        "name": true,
        "phoneNumber": true,
      },
      "studyLevels": [
        true,
        true,
      ],
      "unitId": true,
      "unitName": true,
    },
  },
  "validateOnBlur": true,
  "validateOnChange": true,
  "validateOnMount": false,
  "values": {
    "hasEmailNotification": true,
    "hasSmsNotification": true,
    "isMandatoryAdditionalInformationRequired": false,
    "isSameResponsiblePerson": true,
    "isSharingDataAccepted": true,
    "language": "FI",
    "person": {
      "emailAddress": "",
      "name": "",
      "phoneNumber": "",
    },
    "studyGroup": {
      "amountOfAdult": 2,
      "extraNeeds": "Lisätietoja ilmoittautumiseen",
      "groupName": "4a",
      "groupSize": 10,
      "person": {
        "emailAddress": "testi@testi.fi",
        "name": "Nimi Niminen",
        "phoneNumber": "123321123",
      },
      "studyLevels": [
        "GRADE_2",
        "GRADE_4",
      ],
      "unitId": null,
      "unitName": "Testikoulu",
    },
  },
}
`;

exports[`user can select single occurrences and enrol to it with enrolment form 2`] = `
{
  "dirty": true,
  "errors": {},
  "initialErrors": {},
  "initialTouched": {},
  "initialValues": {
    "hasEmailNotification": true,
    "hasSmsNotification": false,
    "isMandatoryAdditionalInformationRequired": true,
    "isSameResponsiblePerson": true,
    "isSharingDataAccepted": false,
    "language": "FI",
    "person": {
      "emailAddress": "",
      "name": "",
      "phoneNumber": "",
    },
    "studyGroup": {
      "amountOfAdult": "",
      "extraNeeds": "",
      "groupName": "",
      "groupSize": "",
      "person": {
        "emailAddress": "",
        "name": "",
        "phoneNumber": "",
      },
      "studyLevels": [],
      "unitId": "",
      "unitName": "",
    },
  },
  "isSubmitting": false,
  "isValid": true,
  "isValidating": false,
  "submitCount": 2,
  "touched": {
    "hasEmailNotification": true,
    "hasSmsNotification": true,
    "isMandatoryAdditionalInformationRequired": true,
    "isSameResponsiblePerson": true,
    "isSharingDataAccepted": true,
    "language": true,
    "person": {
      "emailAddress": true,
      "name": true,
      "phoneNumber": true,
    },
    "studyGroup": {
      "amountOfAdult": true,
      "extraNeeds": true,
      "groupName": true,
      "groupSize": true,
      "person": {
        "emailAddress": true,
        "name": true,
        "phoneNumber": true,
      },
      "studyLevels": [
        true,
        true,
      ],
      "unitId": true,
      "unitName": true,
    },
  },
  "validateOnBlur": true,
  "validateOnChange": true,
  "validateOnMount": false,
  "values": {
    "hasEmailNotification": true,
    "hasSmsNotification": true,
    "isMandatoryAdditionalInformationRequired": true,
    "isSameResponsiblePerson": true,
    "isSharingDataAccepted": true,
    "language": "FI",
    "person": {
      "emailAddress": "",
      "name": "",
      "phoneNumber": "",
    },
    "studyGroup": {
      "amountOfAdult": 2,
      "extraNeeds": "Lisätietoja ilmoittautumiseen",
      "groupName": "4a",
      "groupSize": 10,
      "person": {
        "emailAddress": "testi@testi.fi",
        "name": "Nimi Niminen",
        "phoneNumber": "123321123",
      },
      "studyLevels": [
        "GRADE_2",
        "GRADE_4",
      ],
      "unitId": null,
      "unitName": "Testikoulu",
    },
  },
}
`;
